# husni-portfolio

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  STORIES.md  Taskfile.yml  build.rs  clippy.toml  deny.toml  env.example  husni-portfolio-dev.sql  husni_portfolio.postman_collection.json  release-plz.toml  renovate.json  tailwind.config.js  version.json
.github/workflows/: rust-audit.yml  rust-ci.yml  rust-push-build.yml  rust-release.yml  rust-unit-test.yml
cmd/: Cargo.toml
cmd/src/: main.rs
internal/: Cargo.toml
internal/migrations/: 20240901103916_initial_migration.sql
internal/src/: app.rs  config.rs  handler.rs  lib.rs  router.rs  routes.rs  state.rs  utils.rs
internal/src/api/: filesystem.rs  github.rs  mod.rs
internal/src/database/: memory.rs  mod.rs  sqlite.rs  turso.rs
internal/src/database/turso/: blog_tag_mappings.rs  blogs.rs  mod.rs  tags.rs  talks.rs
internal/src/handler/: blog.rs  blogs.rs  mod.rs  profile.rs  status.rs  talks.rs  version.rs
internal/src/handler/admin/: displays.rs  mod.rs  talks.rs
internal/src/handler/admin/blogs/: displays.rs  mod.rs  operations.rs
internal/src/handler/admin/blogs/tags/: displays.rs  operations.rs
internal/src/handler/admin/tags/: operations.rs
internal/src/handler/admin/talks/: displays.rs  mod.rs  operations.rs
internal/src/handler/auth/: displays.rs  mod.rs  operations.rs
internal/src/model/: auth.rs  axum.rs  blog.rs  blog_tag_mappings.rs  blogs.rs  data.rs  github.rs  mod.rs  tags.rs  talks.rs  templates.rs  templates_admin.rs  version.rs
internal/src/port/: mod.rs
internal/src/port/api/: query.rs
internal/src/port/blog/: command.rs  query.rs
internal/src/port/blog_tag_mappings/: command.rs  query.rs
internal/src/port/blogs/: command.rs  query.rs
internal/src/port/tags/: command.rs  query.rs
internal/src/port/talks/: command.rs  query.rs
internal/src/repo/: api.rs  blog.rs  blog_tag_mappings.rs  blogs.rs  mod.rs  tags.rs  talks.rs
internal/src/usecase/: api.rs  auth.rs  blog.rs  blog_tag_mappings.rs  blogs.rs  tags.rs  talks.rs
internal/templates/: 418_i_am_a_teapot.html  500_internal_server_error.html  base.html  blog.html  blogs.html  not_found.html  profile.html  talks.html  version.html
internal/templates/admin/: admin.html  admin_base.html  get_edit_talk.html  get_talk.html  get_talks.html  talks.html
internal/templates/admin/blogs/: blogs.html  get_add_blog.html  get_blog.html  get_blogs.html  get_delete_blog.html  get_edit_blog.html  list_blogs.html
internal/templates/admin/blogs/tags/: get_add_tag.html  get_delete_tag.html  get_edit_tag.html  get_tag.html  list_tags.html  tags.html
internal/templates/admin/talks/: get_add_talk.html  get_delete_talk.html  get_edit_talk.html  get_talk.html  list_talks.html  talks.html
internal/templates/auth/: login.html  login_retry.html  login_success.html  logout.html
internal/templates/statuses/: 401_unauthorized.html  404_not_found.html  418_i_am_a_teapot.html  500_internal_server_error.html
specs/: 1-github-actions.md  2-caching.md  references.md
src/: app.rs  config.rs  lib.rs  main.rs  routes.rs  state.rs  utils.rs
src/cache/inmemory/: blog_tag_mappings.rs  blogs.rs  mod.rs  tags.rs  talks.rs
src/database/turso/: auth.rs  blog_tag_mappings.rs  blogs.rs  mod.rs  tags.rs  (+1 more)
src/handler/: blogs.rs  profile.rs  talks.rs  version.rs
src/model/: auth.rs  axum.rs  blog_tag_mappings.rs  blogs.rs  mod.rs  tags.rs  talks.rs  templates.rs  templates_admin.rs  version.rs
src/repo/: auth.rs  blog_tag_mappings.rs  blogs.rs  tags.rs  talks.rs
src/usecase/: auth.rs  blog_tag_mappings.rs  blogs.rs  mod.rs  tags.rs  talks.rs
statics/: input.css  styles.css  theme.js
statics/blogs/: 001-my_favourite_books.md  my_favourite_books.md
templates/: base.html  blog.html  blogs.html  profile.html  talks.html  version.html
templates/admin/: admin.html  admin_base.html
templates/auth/: login_retry.html  login_success.html
tests/: dump.sql
(+20 files in other folders)
