[package]
name = "husni-portfolio"
version = "0.3.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "compression-gzip"] }
askama = { version = "0.12.1"}
serde = { version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
markdown = "1.0.0"
test-log = "0.2.19"
http-body-util = "0.1.3"
regex = "1.12.2"
async-trait = "0.1.89"
dyn-clone = "1.0.20"
libsql = "0.6.0"
urlencoding = "2.1.3"
chrono = "0.4.42"
password-hash = "0.5.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
google-cloud-storage = "1.4.0"
bytes = "1.11.0"

[build-dependencies]
anyhow = "1.0.100"
vergen = { version = "8.3.2", features = ["build", "git", "gitcl"] } #Minimal Vergen
