[package]
name = "husni-portfolio"
version = "0.3.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
tokio = { version = "1.43", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "compression-gzip"] }
askama = { version = "0.14.0"}
serde = { version="1.0.192", features = ["derive"]}
serde_json = "1.0.108"
markdown = "1.0.0-alpha.17"
test-log = "0.2.16"
http-body-util = "0.1.2"
regex = "1.10.6"
async-trait = "0.1.81"
dyn-clone = "1.0.17"
libsql = "0.6.0"
urlencoding = "2.1.3"
chrono = "0.4.41"
password-hash = "0.5.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
google-cloud-storage = "1.1.0"
bytes = "1.10.1"

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] } #Minimal Vergen
