[package]
name = "internal"
version = "0.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-lab = "0.20.0"
actix-files = "0.6.5"
askama = { version = "0.12.1"}
env_logger = "0.10.1"
log = "0.4.20"
serde = { version="1.0.192", features = ["derive"]}
serde_json = "1.0.108"
markdown = "1.0.0-alpha.17"
test-log = "0.2.16"
octocrab = "0.39.0"
http-body-util = "0.1.2"
regex = "1.10.6"

[build-dependencies]
anyhow = "1.0.86"
# Minimal vergen
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] }
