[package]
name = "internal"
version = "0.2.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
askama = { version = "0.12.1"}
serde = { version="1.0.192", features = ["derive"]}
serde_json = "1.0.108"
markdown = "1.0.0-alpha.17"
test-log = "0.2.16"
octocrab = "0.39.0"
http-body-util = "0.1.2"
regex = "1.10.6"
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio"] }
async-trait = "0.1.81"
dyn-clone = "1.0.17"

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.0.0", features = ["build", "git", "gitcl"] } #Minimal Vergen
